--- a/_posts/2018-05-30-GAN-MUNIT.md
+++ b/_posts/2018-05-30-GAN-MUNIT.md
@@ -52,7 +52,7 @@ tags: [GAN]
 
 此篇是從UNIT[arXiv:1703.00848 2017](https://arxiv.org/abs/1703.00848)演進的
 
-我之前有寫過UNIT的介紹，如果有興趣的話可以看看[UNIT介紹](https://www.xiaosean.github.io/deep%20learning/computer%20vision/2018/05/25/GAN-UNIT/)
+我之前有寫過UNIT的介紹，如果有興趣的話可以看看[UNIT介紹](https://xiaosean.github.io/deep%20learning/computer%20vision/2018/05/25/GAN-UNIT/)
 
 原本UNIT可以看作是貓和狗的 1 to 1 對應
 
@@ -343,7 +343,7 @@ self.dis_opt.step()
 
 [UNIT](https://arxiv.org/abs/1703.00848)
 
-[UNIT介紹](https://www.xiaosean.github.io/deep%20learning/computer%20vision/2018/05/25/GAN-UNIT/)
+[UNIT介紹](https://xiaosean.github.io/deep%20learning/computer%20vision/2018/05/25/GAN-UNIT/)
 
 [MUNIT Github](https://github.com/NVlabs/MUNIT)
 
