--- a/_posts/2018-05-25-GAN-UNIT.md
+++ b/_posts/2018-05-25-GAN-UNIT.md
@@ -1,6 +1,7 @@
 ---
 # Posts need to have the `post` layout
 layout: post
+comments: true
 
 # The title of your post
 title: UNIT 介紹 - Unsupervised Image-to-Image Translation
