--- a/_posts/2018-05-30-GAN-MUNIT.md
+++ b/_posts/2018-05-30-GAN-MUNIT.md
@@ -1,6 +1,7 @@
 ---
 # Posts need to have the `post` layout
 layout: post
+comments: true
 
 # The title of your post
 title: MUNIT 介紹 - Multimodal Unsupervised Image-to-Image Translation
