--- a/_posts/2018-06-04-Grad-CAM.md
+++ b/_posts/2018-06-04-Grad-CAM.md
@@ -248,21 +248,21 @@ BP後的值也要是正的才會為正的，
 
 [Two Minutes Paper:One pixel attack defeats neural network]
 
-[Explainable AI 是什麼？為什麼 AI 下判斷要可以解釋？]:(https://medium.com/trustableai/%E5%AE%83%E6%98%AF%E6%80%8E%E9%BA%BC%E7%9F%A5%E9%81%93%E7%9A%84-%E8%A7%A3%E9%87%8B%E6%B7%B1%E5%BA%A6%E5%AD%B8%E7%BF%92%E6%A8%A1%E5%9E%8B-f18f57d18d4f)
+[Explainable AI 是什麼？為什麼 AI 下判斷要可以解釋？]:https://medium.com/trustableai/%E5%AE%83%E6%98%AF%E6%80%8E%E9%BA%BC%E7%9F%A5%E9%81%93%E7%9A%84-%E8%A7%A3%E9%87%8B%E6%B7%B1%E5%BA%A6%E5%AD%B8%E7%BF%92%E6%A8%A1%E5%9E%8B-f18f57d18d4f
 
-[凭什么相信你，我的CNN模型？（篇一：CAM和Grad-CAM)]:(https://bindog.github.io/blog/2018/02/10/model-explanation/)
+[凭什么相信你，我的CNN模型？（篇一：CAM和Grad-CAM)]:https://bindog.github.io/blog/2018/02/10/model-explanation/
 
-[paper:Grad-CAM: Visual Explanations from Deep Networks via Gradient-based Localization]:(https://arxiv.org/abs/1610.02391)
+[paper:Grad-CAM: Visual Explanations from Deep Networks via Gradient-based Localization]:https://arxiv.org/abs/1610.02391
 
-[Paper:Striving for Simplicity: The All Convolutional Net]:(https://arxiv.org/pdf/1412.6806.pdf)
+[Paper:Striving for Simplicity: The All Convolutional Net]:https://arxiv.org/pdf/1412.6806.pdf
 
-[Paper:Learning Deep Features for Discriminative Localization]:(https://arxiv.org/abs/1512.04150)
+[Paper:Learning Deep Features for Discriminative Localization]:https://arxiv.org/abs/1512.04150
 
-[Paper:Network In Network]:(https://arxiv.org/abs/1312.4400)
+[Paper:Network In Network]:https://arxiv.org/abs/1312.4400
 
-[“Why Should I Trust You?” Explaining the Predictions of Any Classifier]:(https://arxiv.org/pdf/1602.04938.pdf)
+[“Why Should I Trust You?” Explaining the Predictions of Any Classifier]:https://arxiv.org/pdf/1602.04938.pdf
 
-[LIME - Local Interpretable Model-Agnostic Explanation 技術介紹]:(https://medium.com/@kstseng/lime-local-interpretable-model-agnostic-explanation-%E6%8A%80%E8%A1%93%E4%BB%8B%E7%B4%B9-a67b6c34c3f8)
-[LIME github]:(https://github.com/marcotcr/lime)
+[LIME - Local Interpretable Model-Agnostic Explanation 技術介紹]:https://medium.com/@kstseng/lime-local-interpretable-model-agnostic-explanation-%E6%8A%80%E8%A1%93%E4%BB%8B%E7%B4%B9-a67b6c34c3f8)
+[LIME github]:(https://github.com/marcotcr/lime
 
-[Two Minutes Paper:One pixel attack defeats neural network]:(https://www.youtube.com/watch?v=SA4YEAWVpbk)
+[Two Minutes Paper:One pixel attack defeats neural network]:https://www.youtube.com/watch?v=SA4YEAWVpbk
