--- a/_posts/2018-06-04-Grad-CAM.md
+++ b/_posts/2018-06-04-Grad-CAM.md
@@ -59,7 +59,7 @@ tags: []
 
 左2是Guided Backpropagation是別的paper提出的方法，可參見[Paper:Striving for Simplicity: The All Convolutional Net]
 
-左三開始都是Grad-CAM所能達到的結果。
+左3開始都是Grad-CAM所能達到的結果。
 
 
 
