--- a/_posts/2018-06-12-MSDNet.md
+++ b/_posts/2018-06-12-MSDNet.md
@@ -241,37 +241,49 @@ Q1.對於Adaptive Neural Networks for Efficient Inference這篇paper有什麼問
 
 A:
 >MSDNet的作者提出：這樣子前面AlexNet所學會的東西，
+>
 >後面的Google Net/ ResNet沒辦法把那些資訊拿來用，
+>
 >覺得有點虧，要想個辦法拿來用。
 
 Q2:如果我們加上Early exits會遇到什麼問題嗎？
 
 A:
 >MSDNet的作者提出：主要有兩個問題，
+>
 >1.在前幾個classifier其實是透過少量的CNN去做判斷，
+>
 >因此缺少了coarse scale(不同尺度)的分辨能力
 >
 >2.如果加上Early exits其實會阻礙feature的訓練過程，
+>
 >可以想到的是我classifier1希望辨認馬，所以馬的feature提高，
+>
 >但是classifer2就會很困擾啊，因為這樣它又要微調一下他後面的參數。
-
-我們可以從下方的圖看到說，如果在既有熱門的CNN模型中直接加入early exits
-
-準確度的曲線會如何？
-
-右邊的圖是說如果我們在某個位置加入了一個early exits, 對我們原先沒有加入分類器時的準確度比較。
-
-![](/assets/img/2018-06-12-MSDNet/Figure3.png)
+>
+>我們可以從下方的圖看到說，如果在既有熱門的CNN模型中直接加入early exits
+>
+>準確度的曲線會如何？
+>
+>右邊的圖是說如果我們在某個位置加入了一個early exits, 對我們原先沒有加入分類器時的準確度比較。
+>
+>![](/assets/img/2018-06-12-MSDNet/Figure3.png)
 
 Q3:缺乏不同尺度的特徵(coarse-level features)要怎麼解決？
 
 A:
 >我們可以從上圖（左）發現一件事情在Resnet有突然攀升的跡象，
+>
 >為什麼呢？因為他在那個地方有經過pooling layer，
+>
 >看看下圖有做筆記的會比較清楚
+>
 >因此我們知道準確度提升的關鍵是要能夠適應不同尺度的特徵(coarse-level features)
+>
 >那我們知道使用pooling Layer可以解決這件事情。
+>
 >我們可以再往一開始的MSDNet架構圖去看就會明白為什麼要在y軸做所謂的縮小動作，
+>
 >因為要讓前幾層有辦法處理coarse-level的問題。
 
 Q4:前面的分類器會影響到後面的分類器怎麼解決？
@@ -288,9 +300,13 @@ ResNet在早期加入一個early exits的影響最大，
 
 A:
 >使用DenseNet，因為我們發現，其實DenseNet就算用了early exits後，
+>
 >他的準確度比較不會影響到最終的輸出分類準確度，
+>
 >前面的layer會被classifier影響的話，
+>
 >那就把更前面的layer資訊拿回來就好。
+>
 >這好處是我們可以讓classifer前面的那個CNN專心的改進他的分類準確度。
 
 綜合前面幾個問題的解答，我們可以用下面這張圖來表示，
@@ -352,15 +368,23 @@ B單位 -> FLOPS (基於不同dataset給定不同的值，ImageNet為0.1~1.4 X 1
 
 1.自己給定0~1之間，準確度要到達多少才離開。
 
-2.Dynamic_evaluation
+2.Dynamic evaluation
 >可以想像，我們在訓練時在training set的準確度都高的可以，
+>
 >但是我們在實際使用validation / test測試時，
+>
 >準確度會下降，
+>
 >因此當初所訂定的threshold，
+>
 >沒辦法確保我們訂定的threshold真的可以提早的讓分類輸出，
+>
 >因此我們需要動態調整，假如我們當初覺得應該要80%準確度就ok，
+>
 >現在我們不是訂定threshold為80％，
+>
 >而是定義每個classifier離開的機率為80%
+>
 >因此我們看到下面這邊我整理的圖
 ![](/assets/img/2018-06-12-MSDNet/Dynamic_evaluation.png)
 
@@ -370,8 +394,11 @@ B單位 -> FLOPS (基於不同dataset給定不同的值，ImageNet為0.1~1.4 X 1
 ![](/assets/img/2018-06-12-MSDNet/loss_function.png)
 
 D => training set
+
 k => 第k個classifier
+
 w => classifer的權重，經驗法則來說全給1的結果還不錯。
+
 L(fk) => cross entropy loss function
 
 
