Update conference accept paper

--- a/_posts/2018-10-29-BigGAN.md
+++ b/_posts/2018-10-29-BigGAN.md
@@ -29,7 +29,7 @@ tags: []
 ---
 Submit to ICLR 2019
 
-Openreview : https://openreview.net/forum?id=B1xsqj09Fm
+OpenReview : https://openreview.net/forum?id=B1xsqj09Fm
 
 Paper Link : https://arxiv.org/abs/1809.11096
 
@@ -77,7 +77,7 @@ GAN 常見的問題就是訓練時會不穩定，
 
 整篇論文朝著三個方向
 
-- 加大 2 ~ 4倍的參數量 / 加大 8 倍 Batch size ， 透過更改架構以及提出 Regurlization 的方法來增進效能。
+- 加大 2 ~ 4倍的參數量 / 加大 8 倍 Batch size ， 透過更改架構以及提出 Regularization 的方法來增進效能。
 - 提出 trunctation trick， 使用這方法能讓模型在多變化(variety)和精細度(fidelity)做取捨，可想成控制模型的能力 e.g. 看是要生成10種不同的狗狗但都很粗糙，或是生成3種不同的狗狗但都很真實。
 - 探討大型的 GAN 為什麼會不穩定，並且分析本文所介紹的方法。
 
@@ -102,9 +102,9 @@ SA-GAN - 2018.05月才發布，
 
 主要架構是基於 SA-GAN (Self-attention GAN)，
 
-同樣採用 Hinge loss，((可見 Geometeic GAN / SN-GAN
+同樣採用 Hinge loss，((可見 Geometric GAN / SN-GAN
 
-G 的部分加入 class-conditional Batchnorm，((可見 A learned represntation for artistic style
+G 的部分加入 class-conditional Batchnorm，((可見 A learned representation for artistic style
 
 D 的部分使用 projection，((可見 cgans with projection discriminator
 
@@ -199,7 +199,7 @@ Spectral Normalization 是要讓最大的 Singular value 去限縮為 1，
 
 我們只要不要更動到對角線的 Singular value 就好拉，
 
-這邊給出的解釋是希望透過下面這式子去最小化 Consine similarity 並且透過下面這式子也不會更改到原本的 norm
+這邊給出的解釋是希望透過下面這式子去最小化 Cosine similarity 並且透過下面這式子也不會更改到原本的 norm
 
 ![](/assets/img/2018-10-29-BigGAN/eq3.png)
 
