--- a/_posts/2018-08-23-pix2pixHD.md
+++ b/_posts/2018-08-23-pix2pixHD.md
@@ -38,7 +38,7 @@ Github Code(Pytorch)：https://github.com/NVIDIA/pix2pixHD
 > config2(training + discriminator) - https://github.com/NVIDIA/pix2pixHD/blob/master/options/train_options.py
 > 上面三個連結搭配著看，應該就能夠理解整體架構了，整體模型較為複雜。
 
-Demo video (建議觀看) : https://github.com/NVIDIA/pix2pixHD
+Demo video (建議觀看) : https://www.youtube.com/watch?v=3AIpPlzM_qs&feature=youtu.be
 
 # 簡介
 
