--- a/_posts/2018-08-23-pix2pixHD.md
+++ b/_posts/2018-08-23-pix2pixHD.md
@@ -71,6 +71,7 @@ pix2pix 是輸出 256 X 256 的合成影像，
 
 會發現輸出圖像的品質不好，並且在訓練時也不夠穩定。
 
+![](/assets/img/2018-08-23-pix2pixHD/pix2pixbase.png)
 
 # 改善解析度與圖片真實性
 
