--- a/_posts/2018-11-18-CFENet.md
+++ b/_posts/2018-11-18-CFENet.md
@@ -127,7 +127,7 @@ P.S. 他的程式碼並不放在master，而是放在working的分支
 - 4 個 Comprehensive Feature Enhancement(CFE) module
 - 2 個 Fusion Blocks(FFB) module
 
-## CFE
+## CFE(Comprehensive Feature Enhancement module)
 
 先前得出的問題點：Conv4_3太淺，特徵不足以用來辨認小物體。
 
@@ -150,7 +150,7 @@ P.S. 他的程式碼並不放在master，而是放在working的分支
 備註:
 > 這邊的 k 設定為 7。
 
-但是如果我們使用 k X k 的 kernal-size 又會增加龐大的運算量，
+但是如果我們使用 k X k 的 kernel-size 又會增加龐大的運算量，
 
 因此這邊使用對稱架構(淺藍色部分)的運算，
 
@@ -176,7 +176,7 @@ P.S. 他的程式碼並不放在master，而是放在working的分支
 >
 > ![](/assets/img/2018-11-18-CFENet/ResNeXt.png)
 
-## FFB
+## FFB(Fusion Blocks)
 
 這部分就是將兩個不同層的 feature maps 合併起來，
 
@@ -205,7 +205,7 @@ P.S. 他的程式碼並不放在master，而是放在working的分支
 ![](/assets/img/2018-11-18-CFENet/table1.png)
 
 
-## ablation study
+## Ablation study
 
 下圖參數定義
 > T: 上方（淺藍色那個部分） 
