Fixed:spell error

--- a/_posts/2018-11-18-CFENet.md
+++ b/_posts/2018-11-18-CFENet.md
@@ -27,7 +27,7 @@ tags: []
 # If you want a category or tag to have its own page,
 # check out `_featured_categories` and `_featured_tags` respectively.
 ---
-ACCV 2018 paper, CVPR2018 - Workshop of Autonomous Driving (WAD), 
+ACCV 2018 paper, CVPR2018 - Workshop of Autonomous Driving (WAD)
 
 Paper Link : https://arxiv.org/abs/1806.09790
 
