--- a/_posts/2018-11-20-M2Det.md
+++ b/_posts/2018-11-20-M2Det.md
@@ -306,7 +306,7 @@ P.S.
 
 在 MSCOCO 的資料集上做實驗，
 
-backbones pretrained on ImageNet.
+backbones pre-trained on ImageNet.
 
 訓練 320x320 以及 512x512 的圖片時，使用4張 Titan X 訓練，
 
