--- a/_posts/2018-12-10-PADA.md
+++ b/_posts/2018-12-10-PADA.md
@@ -4,7 +4,7 @@ layout: post
 comments: true
 
 # The title of your post
-title: PADA簡介 - Visualizing and Understanding Generative Adversarial Networks
+title: PADA簡介 - Partial Adversarial Domain Adaptation
 
 
 # (Optional) Write a short (~150 characters) description of each blog post.
