--- a/_posts/2018-12-10-PADA.md
+++ b/_posts/2018-12-10-PADA.md
@@ -114,7 +114,7 @@ Github code（Pytorch） : https://github.com/thuml/PADA
 
 然後再輸入進 Gd 透過 GAN 的方式來讓 Gf 能對於不同資料集(source/target)所輸出的特徵相似。
 
-- Gf: Feature Extarctor
+- Gf: Feature Extractor
 - Gy: Classifier
 - Gd: Domain Discriminator
 
@@ -183,7 +183,7 @@ Github code（Pytorch） : https://github.com/thuml/PADA
 
 控制權重的方式透過輸入 weight，
 
-pytorch 真方便。
+pyTorch 真方便。
 
 ~~~ python
 class_weight = torch.mean(target_fc8_out, 0)
