--- a/_posts/2018-12-12-TADA.md
+++ b/_posts/2018-12-12-TADA.md
@@ -276,9 +276,9 @@ Trick：為了避免我們的 Local Attention 的結果很糟，
 
 其實 Global attention 和 Local attention 的想法是差不多的，
 
-都是經由 Disciminator 來告知圖片中的哪個區塊有多大的可能性是來自 Source/Target domain，
+都是經由 Discriminator 來告知圖片中的哪個區塊有多大的可能性是來自 Source/Target domain，
 
-因此也可以透過 Gloabal attention 來得知整張圖片與 Source domain 相不相像，
+因此也可以透過 Global attention 來得知整張圖片與 Source domain 相不相像，
 
 評估相像程度給定權重(m)，再經由分類器去對整個模型做訓練。
 
