Fixed: spell wrong

--- a/_posts/2018-12-26-Insta-GAN.md
+++ b/_posts/2018-12-26-Insta-GAN.md
@@ -55,13 +55,13 @@ Github code(PyTorch):https://github.com/sangwoomo/instagan
 
 而本文提出針對個體（Instance）轉換的改善。
 
-因此本篇的重點是 multi-insance transfiguration.
+因此本篇的重點是 multi-instance transfiguration.
 
 以往的圖像轉換多為單一物件的轉換，
 
 但是本文提出多物件轉換，
 
-並且提出 Sequentail mini-batch inference/training 避免物件過多時，
+並且提出 Sequential mini-batch inference/training 避免物件過多時，
 
 轉換途中超出記憶體的問題。
 
@@ -70,7 +70,7 @@ Github code(PyTorch):https://github.com/sangwoomo/instagan
 ![](/assets/img/2018-12-26-Insta-GAN/fig1.png)
 
 主要為 3 個貢獻:
-- 結合 Instance mask 的模型架構(Instance-augmented neual architecture)
+- 結合 Instance mask 的模型架構(Instance-augmented neural architecture)
 	> 加入物件 Mask 的 Image-to-Image 模型。
 - Context preserving loss
 	> 確保 Instance 轉換後背景的一致性。
