Update Framework to Hydejack v8.1.1 !!!!

--- a/_posts/2018-10-29-BigGAN.md
+++ b/_posts/2018-10-29-BigGAN.md
@@ -12,7 +12,7 @@ description: >
   Andrew Brock, Jeff Donahue, Karen Simonyan. ["Large Scale GAN Training for High Fidelity Natural Image Synthesis"](https://arxiv.org/abs/1809.11096).
 # (Optional) Link to an image that represents your blog post.
 # The aspect ratio should be ~16:9.
-image: /assets/img/default.jpg
+<!-- image: /assets/img/default.jpg -->
 
 # You can hide the description and/or image from the output
 # (only visible to search engines) by setting:
