--- a/_posts/2018-11-05-vid2vid.md
+++ b/_posts/2018-11-05-vid2vid.md
@@ -12,7 +12,7 @@ description: >
   Ting-Chun Wang, Ming-Yu Liu, Jun-Yan Zhu, Guilin Liu, Andrew Tao, Jan Kautz, Bryan Catanzaro. ["Video-to-Video Synthesis"](https://arxiv.org/abs/1808.06601). In NIPS 2018.
 # (Optional) Link to an image that represents your blog post.
 # The aspect ratio should be ~16:9.
-image: /assets/img/default.jpg
+<!-- image: /assets/img/default.jpg -->
 
 # You can hide the description and/or image from the output
 # (only visible to search engines) by setting:
