--- a/_posts/2018-11-20-M2Det.md
+++ b/_posts/2018-11-20-M2Det.md
@@ -12,7 +12,7 @@ description: >
   QQijie Zhao, Tao Sheng, Yongtao Wang, Zhi Tang, Ying Chen, Ling Cai, Haibin Ling. ["M2Det: A Single-Shot Object Detector based on Multi-Level Feature Pyramid Network"](https://arxiv.org/abs/1811.04533). In AAAI 2019.
 # (Optional) Link to an image that represents your blog post.
 # The aspect ratio should be ~16:9.
-image: /assets/img/default.jpg
+<!-- image: /assets/img/default.jpg -->
 
 # You can hide the description and/or image from the output
 # (only visible to search engines) by setting:
