--- a/_posts/2018-12-12-TADA.md
+++ b/_posts/2018-12-12-TADA.md
@@ -13,7 +13,7 @@ description: >
   Ximei Wang, Liang Li, Weirui Ye, Mingsheng Long, and Jianmin Wang. ["Transferable Attention for Domain Adaptation"](http://ise.thss.tsinghua.edu.cn/~mlong/doc/transferable-attention-aaai19.pdf). In AAAI'19.
 # (Optional) Link to an image that represents your blog post.
 # The aspect ratio should be ~16:9.
-image: /assets/img/default.jpg
+<!-- image: /assets/img/default.jpg -->
 
 # You can hide the description and/or image from the output
 # (only visible to search engines) by setting:
