--- a/_posts/2018-12-26-Insta-GAN.md
+++ b/_posts/2018-12-26-Insta-GAN.md
@@ -13,7 +13,8 @@ description: >
 
 # (Optional) Link to an image that represents your blog post.
 # The aspect ratio should be ~16:9.
-image: /assets/img/default.jpg
+<!-- image: /assets/img/default.jpg -->
+<!-- hide_image: true -->
 
 # You can hide the description and/or image from the output
 # (only visible to search engines) by setting:
