--- a/_posts/2018-11-18-CFENet.md
+++ b/_posts/2018-11-18-CFENet.md
@@ -12,7 +12,7 @@ description: >
   Qijie Zhao, Tao Sheng, Yongtao Wang, Feng Ni, Ling Cai. ["CFENet: An Accurate and Efficient Single-Shot Object Detector for Autonomous Driving"](https://arxiv.org/abs/1806.09790). In ACCV 2018.
 # (Optional) Link to an image that represents your blog post.
 # The aspect ratio should be ~16:9.
-image: /assets/img/default.jpg
+<!-- image: /assets/img/default.jpg -->
 
 # You can hide the description and/or image from the output
 # (only visible to search engines) by setting:
