--- a/_posts/2018-12-10-PADA.md
+++ b/_posts/2018-12-10-PADA.md
@@ -13,7 +13,7 @@ description: >
   Zhangjie Cao, Lijia Ma, Mingsheng Long, Jianmin Wang. ["Partial Adversarial Domain Adaptation"](https://arxiv.org/abs/1808.04205). In ECCV'18.
 # (Optional) Link to an image that represents your blog post.
 # The aspect ratio should be ~16:9.
-image: /assets/img/default.jpg
+<!-- image: /assets/img/default.jpg -->
 
 # You can hide the description and/or image from the output
 # (only visible to search engines) by setting:
