--- a/_posts/2019-01-29-OCNet.md
+++ b/_posts/2019-01-29-OCNet.md
@@ -171,7 +171,7 @@ Q : 為什麼這會帶來好處？
 
 Key and Query 這兩個在做的是將相同類別的物件視為一體，
 
-模型學習相像的關鍵是基於 Feautre 之間相不相像，
+模型學習相像的關鍵是基於 Feature 之間相不相像，
 > 為什麼不是使用 Label 可以看 v1 的論文，有點瑣碎又不是很重要就不提了。
 
 因此使用 Key and Query 學習在 Feature maps 中的相像程度，
