--- a/_posts/2019-04-13-YOLACT.md
+++ b/_posts/2019-04-13-YOLACT.md
@@ -228,29 +228,45 @@ prototypes mask 並非與 Instance 對應，
 
 ![](/assets/img/2019-04-13-YOLACT/eq1.png)
 
-# Prototype Behavior
+# Prototype Behavior(04/16更新)
 
 這部分挺有趣的，建議去看論文原文。
 
-FCIS 與 Mask R-CNN 都有針對平移敏感性 - translation variance 作加強，
+以 Fully Convolution 的特性有著平移不變性 - translation invariance，
 
-因為以 Fully Convolution 的特性，
+而在 Segment 的問題上我們希望可以將空間的資訊保存好，
 
-其實是有平移不變性 - translation invariance，
+這樣我們分割的時候才能準確地在該 pixel 做分割。
 
-以在分類的問題上來說，
+以往 Mask R-CNN 是先做 RPN，
 
-平移不變性是個優勢，
+為了要得到精準的 Instance Segment 對 ROI 做 Repooling 的動作，
 
-但是在 Segment 的問題上來說鄰近的點可能也是同一個物件，
+是為了要保持空間不變性所做的補強措施，
 
-因此要考量到如何增加 translation variance 的動作。
+但是以此任務來說，我們所輸出的 Mask 是相當於 Image-Size 的大小，
 
-那幸運的是在 Prototype 的視覺化中，
+並沒有額外做過 Translation 各種縮放等等的動作，
 
-發現了它有著平移敏感性的特性！！
+所以它保持著良好的空間資訊，也不需而外做處理，
+
+只要將 Mask 與 Coefficents 做搭配即可得到結果，
+
+所以做起來應該是更快的，
+
+因為 Mask X 係數的範圍算完就有 Instance Segment，
+
+再搭配 fc 所預測出的 class，
+
+就完成了 Instance Segment 的結果，
+
+但最終為了小物體的準確度，
+
+還是有搭配 bbox 做裁切（唯一有做 Translation 的部分）。
 
 ![](/assets/img/2019-04-13-YOLACT/fig5.png)
+
+我們可以看一些例子來明白我們的 Mask 是如何運作的，
 
 以左上角整個圖片都是紅色的例子來說，
 
