Fixed:wrong spell

--- a/_posts/2019-05-02-BDL.md
+++ b/_posts/2019-05-02-BDL.md
@@ -130,13 +130,13 @@ Image-to-Image 的想法是將 Source domain(Ｓ) 的畫風轉換為 Target doma
 
 ![](/assets/img/2019-05-02-BDL/mask-seg.png)
 
-因此訓練 Segmentation adaptation model 會多一個 Segmentatino loss，
+因此訓練 Segmentation adaptation model 會多一個 Segmentation loss，
 
 ![](/assets/img/2019-05-02-BDL/eq3.png)
 
 ![](/assets/img/2019-05-02-BDL/fig2.png)
 
-上圖左方的 Step1 指的是使用 Segmenation adaptation model 完的效果，
+上圖左方的 Step1 指的是使用 Segmentation adaptation model 完的效果，
 
 而 Step2 指的是使用 Self-supervised Learning(SSL) 完的效果，
 
