fixed:wrong spell

--- a/_posts/2019-08-02-BTDA.md
+++ b/_posts/2019-08-02-BTDA.md
@@ -73,7 +73,7 @@ Source Domain 有圖片(Xs)以及標註(Ys - GT)，
 
 那訓練出來的結果會很糟，因為他沒有考量到每個資料集有不同的特性，
 
-以及對於多個不同的 Subset 會有分類錯誤(category-misallignments)的問題。
+以及對於多個不同的 Subset 會有分類錯誤(category-misalignments)的問題。
 
 <!-- 我們借用這篇論文 [Taking A Closer Look at Domain Shift: Category-level Adversaries for Semantics Consistent Domain Adaptation](https://arxiv.org/abs/1809.09478)的圖片示意一下。
 > Yawei Luo, Liang Zheng, Tao Guan, Junqing Yu, Yi Yang. “Taking A Closer Look at Domain Shift: Category-level Adversaries for Semantics Consistent Domain Adaptation”. In CVPR’19.
