--- a/_posts/2019-08-09-OSNet.md
+++ b/_posts/2019-08-09-OSNet.md
@@ -4,7 +4,7 @@ layout: post
 comments: true
 
 # The title of your post
-title: 簡介 - Omni-Scale Feature Learning for Person Re-Identification
+title: OSNet簡介 - Omni-Scale Feature Learning for Person Re-Identification
 
 
 # (Optional) Write a short (~150 characters) description of each blog post.
