--- a/_posts/2019-10-04-tfkd.md
+++ b/_posts/2019-10-04-tfkd.md
@@ -58,7 +58,7 @@ Github(Pytorch): https://github.com/yuanli2333/Teacher-free-Knowledge-Distillati
 
 認為 KD 其實也是一種 Regularization。
 
-本文藉由上述的結果提出 2 種 Teacher free disillation(Tf-KD) 的方法來增進模型效能，
+本文藉由上述的結果提出 2 種 Teacher free distillation(Tf-KD) 的方法來增進模型效能，
 
 而 Teacher free 的應用場景可以針對本身就已經是很龐大的模型(Resnet-101)進行優化，
 
