--- a/_posts/2019-08-02-DEC.md
+++ b/_posts/2019-08-02-DEC.md
@@ -182,6 +182,10 @@ Rmin 指的是將一個類別的資料集取一個比例 - subset 的概念。
 
 # 參考資料：
 
+[Unsupervised Deep Embedding for Clustering Analysis]
+
 [Visualizing Data using t-SNE]
 
 [Visualizing Data using t-SNE]:http://www.jmlr.org/papers/v9/vandermaaten08a.html
+
+[Unsupervised Deep Embedding for Clustering Analysis]:https://arxiv.org/abs/1511.06335
