Feat:Hide some posts

--- a/keep/2020-01-07-GLNet.md
+++ b/keep/2020-01-07-GLNet.md
@@ -1,10 +1,10 @@
 ---
 # Posts need to have the `post` layout
-layout: post
-comments: true
+# layout: post
+# comments: true
 
 # The title of your post
-title: GLNet簡介 - GLNet for Memory-Efficient Segmentation of Ultra-High Resolution Images
+# title: GLNet簡介 - GLNet for Memory-Efficient Segmentation of Ultra-High Resolution Images
 
 
 # (Optional) Write a short (~150 characters) description of each blog post.
